Fix intercooler links not showing a cursor

--- a/src/onegov.org/onegov/org/theme/styles/org.scss
+++ b/src/onegov.org/onegov/org/theme/styles/org.scss
@@ -96,6 +96,7 @@ a:not([href]):not([role]) {
 .button,
 .confirm,
 .fc-event,
+a[ic-verb],
 .partition-occupied {
     cursor: pointer !important;
 }
